<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rl_auth_root"
    android:background="@color/colorPrimary"
    tools:context=".auth.AuthenticationActivity">

    <ImageView
        android:id="@+id/iv_auth_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_margin="16dp"
        app:srcCompat="@drawable/ic_arrow_forward_white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/account_page"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_auth_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:elevation="16dp"
        app:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <EditText
                android:id="@+id/et_auth_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/username" />

            <EditText
                android:id="@+id/et_auth_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/password" />

            <Button
                android:id="@+id/btn_auth_authentication"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/background_button_primary"
                android:text="@string/login"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_auth_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/sing_up"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/liner_auth_progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cardView_auth_container"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="در حال دریافت اطلاعات"
            android:textColor="@color/white" />

    </LinearLayout>

</RelativeLayout>