<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.MainActivity"
    android:id="@+id/coordinator_main">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:layout_scrollFlags="scroll|enterAlways"
            android:background="@color/colorPrimary"
            >
            <ImageView
                android:id="@+id/iv_main_cart"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:layout_alignParentLeft="true"
                app:srcCompat="@drawable/ic_shopping_cart"
                />
            <ImageView
                android:id="@+id/iv_main_search"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_toRightOf="@+id/iv_main_cart"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                app:srcCompat="@drawable/ic_search_black_24dp"
                />
            <ImageView
                android:id="@+id/iv_main_menu"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="16dp"
                app:srcCompat="@drawable/ic_menu_black_24dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/iv_main_menu"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_centerVertical="true"
                android:layout_marginRight="8dp"
                android:text="@string/app_name"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal"
            android:weightSum="7"
            android:layoutDirection="rtl"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical"
            >
            <ImageView
                android:id="@+id/iv_main_mother"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:src="@drawable/ic_mother"

               />

            <ImageView
            android:id="@+id/iv_main_baby"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:src="@drawable/ic_babies"
            />
            <ImageView
                android:id="@+id/iv_main_girl"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:src="@drawable/ic_baby_girl"
                />
            <ImageView
                android:id="@+id/iv_main_boy"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:src="@drawable/ic_baby_boy"
                />
            <ImageView
                android:id="@+id/iv_main_toy"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:src="@drawable/ic_kid_toy"
                />
            <ImageView
                android:id="@+id/iv_main_bed"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:src="@drawable/ic_baby_bed"
               />
            <ImageView
                android:id="@+id/iv_main_student"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:src="@drawable/ic_study"
               />
            </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:src="@drawable/banner"
            />
<!--        <androidx.recyclerview.widget.RecyclerView-->

<!--            android:id="@+id/rv_main_banner"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->

<!--            />-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/latest_product"/>
            <TextView
                android:id="@+id/tv_main_viewAllLatestProducts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:text="@string/show_all_product"
                android:onClick="onClick"
                />

        </RelativeLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_main_latestProducts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="140dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:clipToPadding="false"
            android:layout_margin="8dp"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
    android:layout_alignParentRight="true"
                android:text="@string/papular_product"/>
            <TextView
                android:id="@+id/tv_main_viewAllPopularProducts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:text="@string/show_all_product"
                android:onClick="onClick"
                />

        </RelativeLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_main_popularProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="140dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:clipToPadding="false"
            android:layout_margin="8dp"
            />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>