<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_details_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".details.ProductDetailsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            app:layout_scrollFlags="scroll|enterAlways"

            >

            <ImageView
                android:id="@+id/iv_details_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/ic_arrow_forward"
                />

            <TextView
                android:id="@+id/tv_details_titlePage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="8dp"
                android:layout_toLeftOf="@+id/iv_details_back"
                android:gravity="right"
                android:textSize="16sp"
                tools:text="@string/title_product" />
        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appbar_details"
        android:layout_marginTop="-3dp"
        android:paddingStart="4dp"
        android:paddingLeft="4dp"
        android:paddingEnd="4dp"
        android:paddingRight="4dp"
        android:textAlignment="center"
        android:textDirection="rtl">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_details_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                app:layout_constraintDimensionRatio=""
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/tv_details_titleProduct"
                android:layout_width="294dp"
                android:layout_height="54dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="@+id/iv_details_comment"
                app:layout_constraintTop_toBottomOf="@+id/iv_details_image"
                tools:text="قیمت محصول مورد نطر دستبند طلا 18 عیار زنانه ریسه گالری کد Ri3-H1170 " />

            <TextView
                android:id="@+id/tv_details_prePrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"

                android:gravity="center"
                android:textColor="@color/gray400"
                android:textSize="12sp"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toTopOf="@+id/tv_details_titleProduct"
                tools:text="200 هزار تومان" />

            <TextView
                android:id="@+id/tv_details_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/tv_details_prePrice"
                tools:text="150 هزار تومان" />

            <Button
                android:id="@+id/btn_details_addToCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/background_button_add_to_cart"
                android:drawableStart="@drawable/ic_add_to_cart"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/add_to_cart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_details_price" />

            <TextView
                android:id="@+id/tv_details_addComment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/add_comment"
                android:textColor="@color/colorAccent"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/btn_details_addToCart" />

            <ImageView
                android:id="@+id/iv_details_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/tv_details_comment"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_details_comment"
                app:srcCompat="@drawable/ic_assignment" />

            <TextView
                android:id="@+id/tv_details_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="نطرات کاربران"
                app:layout_constraintBottom_toBottomOf="@+id/tv_details_addComment"
                app:layout_constraintEnd_toStartOf="@+id/iv_details_comment"
                app:layout_constraintTop_toTopOf="@+id/tv_details_addComment" />


            <ProgressBar
                android:id="@+id/progressBar_details"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/rv_details_comments"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/tv_details_addComment" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_details_comments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                android:paddingBottom="4dp"
                android:paddingTop="4dp"
                android:clipToPadding="false"/>

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="left" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="8dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</RelativeLayout>